--- a/Actions/DetermineProjectsToBuild/action.yaml
+++ b/Actions/DetermineProjectsToBuild/action.yaml
@@ -22,16 +22,13 @@ outputs:
 runs:
   using: composite
   steps:
-    - name: Get Modified Files
-      id: getModifiedFiles
-      shell: ${{ inputs.shell }}
-      run: try { ${{ github.action_path }}/GetModifiedFiles.ps1 -token ${{ github.token }}  } catch { Write-Host "::Error::Unexpected error when running action ($($_.Exception.Message.Replace("`r",'').Replace("`n",' ')))"; exit 1 }
-
     - name: Determine Projects to Build
       shell: ${{ inputs.shell }}
       id: determineProjectsToBuild
       run: try { 
-          ${{ github.action_path }}/DetermineProjectsToBuild.Action.ps1 -baseFolder ${{ github.workspace }} -modifiedFiles ${{ fromJson(steps.getModifiedFiles.outputs.modifiedFiles) }} -parentTelemetryScopeJson ${{ inputs.parentTelemetryScopeJson }} 
+          $changedFiles = ${{ github.action_path }}/GetModifiedFiles.ps1 -token ${{ github.token }}
+
+          ${{ github.action_path }}/DetermineProjectsToBuild.Action.ps1 -baseFolder ${{ github.workspace }} -modifiedFiles $changedFiles -parentTelemetryScopeJson ${{ inputs.parentTelemetryScopeJson }} 
         } catch { Write-Host "::Error::Unexpected error when running action ($($_.Exception.Message.Replace("`r",'').Replace("`n",' ')))"; exit 1 }
 branding:
   icon: terminal
