Add suffix in CalculateArtifactNames

--- a/Actions/CalculateArtifactNames/action.yaml
+++ b/Actions/CalculateArtifactNames/action.yaml
@@ -17,6 +17,10 @@ inputs:
   branchName:
     description: Name of the branch the workflow is running on
     required: true
+  suffix:
+    description: Suffix to add to the artifacts names
+    required: false
+    default: ''
 outputs:
   ThisBuildAppsArtifactsName:
     description: Artifact name for apps being built in the current workflow run
@@ -59,7 +63,8 @@ runs:
         _project: ${{ inputs.project }}
         _buildMode: ${{ inputs.buildMode }}
         _branchName: ${{ inputs.branchName }}
-      run: try { ${{ github.action_path }}/CalculateArtifactNames.ps1 -settingsJson $ENV:_settingsJson -project $ENV:_project -buildMode $ENV:_buildMode -branchName $ENV:_branchName } catch { Write-Host "::Error::Unexpected error when running action ($($_.Exception.Message.Replace("*",'').Replace("*",' ')))"; exit 1 }
+        _suffix: ${{ inputs.suffix }}
+      run: try { ${{ github.action_path }}/CalculateArtifactNames.ps1 -settingsJson $ENV:_settingsJson -project $ENV:_project -buildMode $ENV:_buildMode -branchName $ENV:_branchName -suffix $ENV:_suffix } catch { Write-Host "::Error::Unexpected error when running action ($($_.Exception.Message.Replace("*",'').Replace("*",' ')))"; exit 1 }
 branding:
   icon: terminal
   color: blue
