--- a/Templates/AppSource App/.github/workflows/CICD.yaml
+++ b/Templates/AppSource App/.github/workflows/CICD.yaml
@@ -199,6 +199,7 @@ jobs:
           path: '.dependencies'
 
       - name: Read settings
+        id: readProjectSettings
         uses: microsoft/AL-Go-Actions/ReadSettings@main
         with:
           shell: ${{ needs.Initialization.outputs.githubRunnerShell }}
@@ -207,6 +208,7 @@ jobs:
 
       - name: Read secrets
         uses: microsoft/AL-Go-Actions/ReadSecrets@main
+        timeout-minutes: ${{ fromJson(steps.readProjectSettings.outputs.SettingsJson).buildTimeoutInMinutes }}
         env:
           secrets: ${{ toJson(secrets) }}
         with:
