--- a/Templates/Per Tenant Extension/.github/workflows/PullRequestHandler.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/PullRequestHandler.yaml
@@ -32,10 +32,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           lfs: true
-          ref: ${{ github.event.pull_request.head.sha }}
-      
-      - run: |
-          git pull --no-edit --no-rebase --no-ff origin ${{ github.event.pull_request.base.ref }}
+          ref: refs/pull/${{ github.event.number }}/merge
 
       - uses: microsoft/AL-Go-Actions/VerifyPRChanges@main
         with:
@@ -60,10 +57,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           lfs: true
-          ref: ${{ github.event.pull_request.head.sha }}
-      
-      - run: |
-          git pull --no-edit --no-rebase --no-ff origin ${{ github.event.pull_request.base.sha }}
+          ref: refs/pull/${{ github.event.number }}/merge
 
       - name: Initialize the workflow
         id: init
@@ -110,10 +104,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           lfs: true
-          ref: ${{ github.event.pull_request.head.sha }}
-      
-      - run: |
-          git pull --no-edit --no-rebase --no-ff origin ${{ github.event.pull_request.base.sha }}
+          ref: refs/pull/${{ github.event.number }}/merge
     
       - name: Download thisbuild artifacts
         if: env.workflowDepth > 1
@@ -235,6 +226,12 @@ jobs:
     needs: [ Initialization, Build ]
     if: (!cancelled())
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          lfs: true
+          ref: refs/pull/${{ github.event.number }}/merge
+
       - name: Finalize the workflow
         id: PostProcess
         uses: microsoft/AL-Go-Actions/WorkflowPostProcess@main
