Refactor path to files

--- a/Actions/Sign/action.yaml
+++ b/Actions/Sign/action.yaml
@@ -23,10 +23,6 @@ inputs:
   pathToFiles:
     description: The path to the files to be signed
     required: true
-  fileExtensionsToSign:
-    description: The file extensions to be signed
-    required: false
-    default: .app
   timestampService:
     description: The URI of the timestamp server
     required: false
@@ -52,12 +48,10 @@ runs:
         _azureKeyVaultTenantID: ${{ inputs.azureKeyVaultTenantID }}
         _azureKeyVaultCertificateName: ${{ inputs.azureKeyVaultCertificateName }}
         _pathToFiles: ${{ inputs.pathToFiles }}
-        _fileExtensionsToSign: ${{ inputs.fileExtensionsToSign }}
         _timestampService: ${{ inputs.timestampService }}
         _digestAlgorithm: ${{ inputs.digestAlgorithm }}
       run: | 
         try { 
-          $FileExtensionsToSign = ($ENV:_fileExtensionsToSign -split ',')          
           ${{ github.action_path }}/Sign.ps1 -AzureKeyVaultURI "$($ENV:_azureKeyVaultURI)" `
                                       -AzureKeyVaultClientID "$($ENV:_azureKeyVaultClientID)" `
                                       -AzureKeyVaultClientSecret "$($ENV:_azureKeyVaultClientSecret)" `
@@ -66,8 +60,7 @@ runs:
                                       -TimestampService "$($ENV:_timestampService)" `
                                       -TimestampDigest "$($ENV:_digestAlgorithm)" `
                                       -FileDigest "$($ENV:_digestAlgorithm)" `
-                                      -PathToFiles "$($ENV:_pathToFiles)" `
-                                      -FileExtensionsToSign $FileExtensionsToSign
+                                      -PathToFiles "$($ENV:_pathToFiles)"
         } catch { 
           Write-Host "::Error::Unexpected error when running action ($($_.Exception.Message.Replace("`r",'').Replace("`n",' ')))"; exit 1 
         }
