--- a/Actions/Sign/action.yaml
+++ b/Actions/Sign/action.yaml
@@ -41,6 +41,12 @@ runs:
     - name: Install Azure SignTool
       shell: ${{ inputs.shell }}
       run: dotnet tool install --global AzureSignTool --version 4.0.1
+    
+    - name: Register NavSip
+      shell: ${{ inputs.shell }}
+      run: | 
+        Import-Module (Join-Path -Path $PSScriptRoot -ChildPath "Sign.psm1" -Resolve)
+        Register-NavSip
 
     - name: run
       shell: ${{ inputs.shell }}
