WIP Utilize build dimensions and base branch

--- a/Actions/FetchProjectDependencies/action.yaml
+++ b/Actions/FetchProjectDependencies/action.yaml
@@ -13,6 +13,8 @@ inputs:
     required: true
   dependencyProjects:
     description: Projects that are current project's dependencies
+  buildDimensions:
+    description: The current build dimensions (a JSON-formatted array of objects {project, buildMode})
 outputs:
   FetchedArtifacts: 
     description: An array of artifacts that were fetched
@@ -24,7 +26,7 @@ runs:
       shell: ${{ inputs.shell }}
       id: FetchDependencies
       run: 
-        ${{ github.action_path }}/FetchProjectDependencies.ps1 -project ${{ inputs.project }} -dependencyProjects ${{ dependencyProjects }} -buildMode ${{ inputs.buildMode }}
+        ${{ github.action_path }}/FetchProjectDependencies.ps1 -project ${{ inputs.project }} -dependencyProjects ${{ dependencyProjects }} -buildMode ${{ inputs.buildMode }} -buildDimensions ${{ inputs.buildDimensions }} -baseBranch ${{ github.base_ref }} 
 branding:
   icon: terminal
   color: blue
