--- a/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
@@ -244,6 +244,19 @@ jobs:
           settingsJson: ${{ env.Settings }}
           secretsJson: ${{ env.RepoSecrets }}
           buildMode: ${{ matrix.buildMode }}
+      
+      - name: Sign
+        id: sign
+        uses: microsoft/AL-Go-Actions/Sign@preview
+        with:
+          shell: ${{ needs.Initialization.outputs.githubRunnerShell }}
+          azureKeyVaultURI: ${{ secrets.KEY_VAULT_URL }}
+          azureKeyVaultClientID: ${{ secrets.KEY_VAULT_CLIENT_ID }}
+          azureKeyVaultClientSecret: ${{ secrets.KEY_VAULT_CLIENT_SECRET }}
+          azureKeyVaultTenantID: ${{ secrets.KEY_VAULT_TENANT_ID }}
+          azureKeyVaultCertificateName: ${{ secrets.KEY_VAULT_CERTIFICATE_NAME }}
+          pathToFiles: '${{ matrix.project }}/.buildartifacts/Apps/*.app'
+          parentTelemetryScopeJson: ${{ needs.Initialization.outputs.telemetryScopeJson }}
 
       - name: Calculate Artifact names
         id: calculateArtifactsNames
