--- a/Templates/AppSource App/.github/workflows/CICD.yaml
+++ b/Templates/AppSource App/.github/workflows/CICD.yaml
@@ -215,6 +215,21 @@ jobs:
           settingsJson: ${{ env.Settings }}
           secrets: 'licenseFileUrl,insiderSasToken,codeSignCertificateUrl,codeSignCertificatePassword,keyVaultCertificateUrl,keyVaultCertificatePassword,keyVaultClientId,storageContext,gitHubPackagesContext'
 
+      - name: Test 
+        run: |
+          $KeyvaultUriSecretName = "${{ env.codesignKeyvaultUriSecretName }}"
+          $KeyvaultClientIdSecretName = "${{ env.codesignKeyvaultClientIdSecretName }}"
+          $KeyvaultClientSecretSecretName = "${{ env.codesignKeyvaultClientSecretSecretName }}"
+          $KeyvaultTenantIdSecretName = "${{ env.codesignKeyvaultTenantIdSecretName }}"
+          $KeyvaultCertificateSecretName = "${{ env.codesignKeyvaultCertificateSecretName }}"
+
+
+          Write-Host "KeyvaultUriSecretName=$KeyvaultUriSecretName"
+          Write-Host "KeyvaultClientIdSecretName=$KeyvaultClientIdSecretName"
+          Write-Host "KeyvaultClientSecretSecretName=$KeyvaultClientSecretSecretName"
+          Write-Host "KeyvaultTenantIdSecretName=$KeyvaultTenantIdSecretName"
+          Write-Host "KeyvaultCertificateSecretName=$KeyvaultCertificateSecretName"
+
       - name: Determine ArtifactUrl
         uses: microsoft/AL-Go-Actions/DetermineArtifactUrl@main
         id: determineArtifactUrl
@@ -244,6 +259,20 @@ jobs:
           settingsJson: ${{ env.Settings }}
           secretsJson: ${{ env.RepoSecrets }}
           buildMode: ${{ matrix.buildMode }}
+      
+      - name: Sign
+        if: env.doNotSignApps == 'False' && env.codesignKeyvaultCertificateSecretName != ''
+        id: sign
+        uses: microsoft/AL-Go-Actions/Sign@main
+        with:
+          shell: ${{ needs.Initialization.outputs.githubRunnerShell }}
+          azureKeyVaultURI: ${{ secrets[format('{0}', env.codesignKeyvaultUriSecretName)] }}
+          azureKeyVaultClientID: ${{ secrets[format('{0}', env.codesignKeyvaultClientIdSecretName)] }}
+          azureKeyVaultClientSecret: ${{ secrets[format('{0}', env.codesignKeyvaultClientSecretSecretName)] }}
+          azureKeyVaultTenantID: ${{ secrets[format('{0}', env.codesignKeyvaultTenantIdSecretName)] }}
+          azureKeyVaultCertificateName: ${{ secrets[format('{0}', env.codesignKeyvaultCertificateSecretName)] }}
+          pathToFiles: '${{ matrix.project }}/.buildartifacts/Apps/*.app'
+          parentTelemetryScopeJson: ${{ needs.Initialization.outputs.telemetryScopeJson }}
 
       - name: Calculate Artifact names
         id: calculateArtifactsNames
