--- a/Templates/AppSource App/.github/workflows/CICD.yaml
+++ b/Templates/AppSource App/.github/workflows/CICD.yaml
@@ -246,16 +246,16 @@ jobs:
           buildMode: ${{ matrix.buildMode }}
       
       - name: Sign
-        if: env.doNotSignApps == 'False' && env.codeSignCertificateSecretName != ''
+        if: env.doNotSignApps == 'False' && env.keyVaultCodesignCertificateName != ''
         id: sign
         uses: microsoft/AL-Go-Actions/Sign@main
         with:
           shell: ${{ needs.Initialization.outputs.githubRunnerShell }}
-          azureKeyVaultURI: ${{ secrets[format('{0}', env.codesignKeyvaultUriSecretName)] }}
-          azureKeyVaultClientID: ${{ secrets[format('{0}', env.codeSignClientIdSecretName)] }}
-          azureKeyVaultClientSecret: ${{ secrets[format('{0}', env.codeSignClientSecretSecretName)] }}
-          azureKeyVaultTenantID: ${{ secrets[format('{0}', env.codeSignTenantIdSecretName)] }}
-          azureKeyVaultCertificateName: ${{ secrets[format('{0}', env.codeSignCertificateSecretName)] }}
+          azureKeyVaultURI: ${{ secrets.AZURE_KEYVAULT_URI }}
+          azureKeyVaultClientID: ${{ secrets.AZURE_CLIENT_ID }}
+          azureKeyVaultClientSecret: ${{ secrets.AZURE_CLIENT_SECRET }}
+          azureKeyVaultTenantID: ${{ secrets.AZURE_TENANT_ID }}
+          azureKeyVaultCertificateName: ${{ env.keyVaultCodesignCertificateName }}
           pathToFiles: '${{ matrix.project }}/.buildartifacts/Apps/*.app'
           parentTelemetryScopeJson: ${{ needs.Initialization.outputs.telemetryScopeJson }}
 
